# apollo

./: .gitignore  BUILD.md  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build-release.yml  pr.yml
android/: .dockeringnore  CHANGELOG.md  Dockerfile  Dockerfile.dockerignore
android/apollo/: build.gradle  lint-baseline.xml
android/apolloui/: .gitignore  build.gradle  houston.gradle  lint-baseline.xml
android/libwallet/: build.gradle
apollo/: build.gradle
common/: build.gradle
libwallet/: .gitignore  README.md  V1.go  V2.go  V2_test.go  V3.go  V3_test.go  V4.go  V4_test.go  V5.go  V6.go  address.go  address_test.go  aes.go  aes_test.go  bip21.go  bip21_test.go  bip70.pb.go  bip70.proto  bridge.go  bridge_logs.go  challenge_keys.go  challenge_keys_test.go  challenge_public_key.go  derivationpath.go  derivationpath_test.go  ek_html.go  ek_html_test.go  emergency_kit.go  emergency_kit_test.go  encodings.go  encodings_test.go  encrypt.go  encrypt_test.go  errors.go  features.go  features_test.go  fees.go  go.mod  go.sum  (+37 more)
libwallet/addresses/: addresses.go  addresses_test.go  v1.go  v2.go  v2_test.go  v3.go  v3_test.go  v4.go  v4_test.go  v5.go  v5_test.go  v6.go  v6_test.go
libwallet/aescbc/: aescbc.go  aescbc_test.go
libwallet/app_provided_data/: config.go  feature_flag.go  keys.go  log.go  nfc_bridge.go  service_request.go
libwallet/cryptography/: secp256r1p.go
libwallet/docker/: builder.Dockerfile
libwallet/electrum/: client.go  pool.go  servers.go
libwallet/emergencykit/: content.go  css.go  descriptors.go  descriptors_test.go  emergencykit.go  emergencykit_test.go  metadata.go  metadata_test.go
libwallet/encrypted_cosigning_key/: encrypted_extended_key.go  encrypted_extended_key_test.go  padding_encryption.go  padding_encryption_test.go  verify.go  verify_test.go
libwallet/encryption/: cypher.go  cypher_test.go  encodings.go  encodings_test.go  secret.go
libwallet/errors/: api_errors.go  errors.go
libwallet/fees/: fees.go  fees_test.go
libwallet/hdpath/: hdpath.go  hdpath_test.go
libwallet/keycrypt/: keycrypt.go  keycrypt_test.go
libwallet/librs/: Cargo.toml  README.md  librs.go  librs.h  librs_test.go  libs.Dockerfile  makelibs.sh
libwallet/librs/bindings/: Cargo.toml
libwallet/librs/bindings/src/: lib.rs
libwallet/librs/generate/: Cargo.toml
libwallet/librs/generate/src/: main.rs
libwallet/libwallet_init/: init.go
libwallet/lnurl/: lnurl.go  lnurl_test.go
libwallet/log/: log.go
libwallet/musig/: README.md  adaptor_impl.h  ecmult_static_context.h  extrakeys_main_impl.h  impl.go  import.sh  keyagg.h  keyagg_impl.h  libsecp256k1-config.h  musig.go  (+15 more)
prover/libs/plonky2-bitcoin-hpke/: Cargo.toml  README.md
prover/libs/plonky2-bitcoin-hpke/src/: chacha20_poly1305_bytes.rs  constants.rs  encoding.rs  hpke.rs  kem.rs  labeled_hkdf.rs  lib.rs  utils.rs
prover/libs/plonky2-chacha20-poly1305/: Cargo.toml
prover/libs/plonky2-chacha20-poly1305/src/: chacha20_poly1305.rs  lib.rs  u32_bits.rs
prover/libs/plonky2-chacha20-poly1305/src/chacha20/: block.rs  encrypt.rs  keystream.rs  mod.rs
prover/libs/plonky2-chacha20-poly1305/src/poly1305/: mac.rs  mod.rs
prover/libs/plonky2-cosigning-key-validation/: Cargo.toml  Makefile  README.md
prover/libs/plonky2-cosigning-key-validation/src/: circuit.rs  inputs.rs  interface.rs  lib.rs  testing.rs
prover/libs/plonky2-ecdsa/: Cargo.toml  README.md
prover/libs/plonky2-ecdsa/src/curve/: curve_adds.rs  curve_msm.rs  curve_multiplication.rs  curve_summation.rs  curve_types.rs  ecdsa.rs  glv.rs  secp256k1.rs
prover/libs/plonky2-ecdsa/src/gadgets/: biguint.rs  curve.rs  curve_fixed_base.rs  curve_msm.rs  curve_windowed_mul.rs  ecdsa.rs  glv.rs  mod.rs  nonnative.rs  split_nonnative.rs
prover/libs/plonky2-hkdf-sha256/: Cargo.toml  README.md
prover/libs/plonky2-hkdf-sha256/src/: hkdf.rs  hmac.rs  lib.rs  sha256_bytes.rs
prover/libs/plonky2-precomputed-windowed-mul/: Cargo.toml
prover/libs/plonky2-precomputed-windowed-mul/src/: lib.rs  mul.rs  utils.rs
prover/libs/plonky2-u32/: Cargo.toml  README.md
prover/libs/plonky2-u32/src/: serialization.rs  witness.rs
prover/libs/plonky2-u32/src/gadgets/: arithmetic_u32.rs  mod.rs  multiple_comparison.rs
prover/libs/plonky2-u32/src/gates/: add_many_u32.rs  arithmetic_u32.rs  comparison.rs  range_check_u32.rs  subtraction_u32.rs
tools/: bootstrap-gomobile.sh  libwallet-android.sh  verify-apollo.sh
(+2865 files in other folders)
