[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[features]
parallel = ["plonky2_maybe_rayon/parallel"]

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
plonky2 = { version = "1.0.2" }
plonky2_maybe_rayon = { version = "0.1.0", default-features = false }
plonky2_u32 = { path = "../plonky2-u32" }
num = { version = "0.4.0", default-features = false }
rand = "0.8.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
